[package]
name = "dict_unifier-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
fs_extra = "1.3.0"
home = "0.5.4"
lazy-regex = "2.4.1"
lazy_static = "1.4.0"
progress = "0.2.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[build-dependencies]
fs_extra = "1.3.0"
